--- a/tabela.html
+++ b/tabela.html
@@ -13,21 +13,21 @@
 
             <td><center>nome da area</center></td>
             <td><center>salario medio</center></td>
-            <td><center>carga horaria</center></td>
+            <td><center>carga horaria semanal</center></td>
             
         </tr>
         <tr>
 
             <td><center>construçâo</center></td>
             <td><center>R$ 2.500</center></td>
-            <td><center>a</center></td>
+            <td><center>44 hrs</center></td>
       
         </tr>
         <tr>
 
             <td><center>arquiteto</center></td>
             <td><center>R$ 5.900</center></td>
-            <td><center>a</center></td>
+            <td><center>40 hrs</center></td>
 
         </tr>
 
